# white-rabbit

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
analysis/: profile.sh
include/wr/: scheduler.hpp  task.hpp  task_container.hpp  unbounded_mpmc_queue.hpp
src/: CMakeLists.txt
src/coordination/: coordinator.cc  coordinator.hpp  directive.hpp  readme.md  throttler.cc  throttler.hpp  wake_condition.hpp
src/coordinator/: coordinator.hpp  search_directive.hpp  throttler.hpp  wake_condition.hpp
src/exec/: config.hpp  executor.hpp
src/exec/config/: concept.hpp  config.hpp
src/queues/global/: global_queue.cpp  global_queue.hpp  global_queue.tpp  readme.md
src/queues/local/: DESIGN.md  fwd.hpp  loot.hpp  loot.tpp  mpmc_queue.hpp  readme.md  ring_buffer.hpp  ring_buffer.tpp  shared_state.hpp  shared_state.tpp  steal_handle.hpp  steal_handle.tpp  utils.hpp  ws_queue.hpp  ws_queue.tpp
src/sched/: inteface.hpp  ischeduler.hpp  scheduler.hpp  worker.hpp
src/tasks/: concept.hpp  interface.hpp  task.hpp  task_container.hpp
src/utils/: constants.hpp  std_like.hpp
src/worker/: worker.hpp
tests/: CMakeLists.txt  indexing_fix.cpp  main.cpp
tests/coord/: unit.cc
tests/queues/global/: CMakeLists.txt  unit.cpp
tests/queues/local/: CMakeLists.txt  ringbuffer.cc
tests/twist/: CMakeLists.txt
tests/twist/fault_injection/: CMakeLists.txt  ronaldo.cc  steal_stress.cc
tests/twist/simulation/: CMakeLists.txt  messi.cc
tests/unit/: CMakeLists.txt
tests/unit/coord/: CMakeLists.txt  unit.cc
tests/unit/exec/: integr.cc
tests/unit/queues/global/: CMakeLists.txt  unit.cc
tests/unit/queues/local/: CMakeLists.txt  ringbuffer.cc  sharedstate.cc  wsq_unit.cc
tools/: profile.sh
