FILE(GLOB_RECURSE CPP_FILES CONFIGURE_DEPENDS "*.cpp")
FILE(GLOB_RECURSE HPP_FILES CONFIGURE_DEPENDS "*.hpp" "*.h")

ADD_LIBRARY(white_rabbit INTERFACE)

TARGET_LINK_LIBRARIES(white_rabbit INTERFACE third_party_vvv)

TARGET_INCLUDE_DIRECTORIES(white_rabbit
    INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

TARGET_SOURCES(white_rabbit INTERFACE ${HPP_FILES})
