FUNCTION(ADD_TWIST_TEST TEST_NAME TEST_SOURCE)
  ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCE})
  TARGET_LINK_LIBRARIES(${TEST_NAME} PRIVATE white_rabbit twist)
  TARGET_COMPILE_FEATURES(${TEST_NAME} PRIVATE cxx_std_20)
  TARGET_COMPILE_DEFINITIONS(${TEST_NAME} PRIVATE WR_WITH_TWIST)
  ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
  SET_TESTS_PROPERTIES(${TEST_NAME} PROPERTIES LABELS "twist")
ENDFUNCTION()

ADD_SUBDIRECTORY(simulation)
ADD_SUBDIRECTORY(fault_injection)
ADD_SUBDIRECTORY(model_checking)
